# envscan

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
cli/: __init__.py  main.py
envscan/: __init__.py
tests/: test_cli.py  test_integration_envs.py
